--- a/frontend/src/style/Moderation.css
+++ b/frontend/src/style/Moderation.css
@@ -7,9 +7,16 @@ header {
   position: relative;
 
   .content_user {
-    position: absolute;
-    right: 50px;
-    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0px;
+
+    padding: 0px 50px;
+
 
     .user {
       height: 100%;
@@ -24,4 +31,32 @@ header {
       cursor: pointer;
     }
   }
+}
+
+
+main {
+  width: 100vw;
+
+  .section1 {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 0px;
+
+    .conteiner_catalogue, .conteiner_kart {
+      width: 40%;
+      height: 80%;
+      background-color: rgb(255, 255, 255);
+      border: 2px solid rgb(0, 0, 0);
+    }
+  }
+}
+
+.modal {
+  width: 80vw;
+  min-height: 80vh;
 }
