--- a/frontend/src/style/Main.css
+++ b/frontend/src/style/Main.css
@@ -3,7 +3,7 @@
 }
 
 .container_navbar {
-  background-image: url('../resyrs/main/main.png');
+  background-image: url('../assets/main/main.png');
   width: 100vw;
   height: 100vh;
   background-size: cover;
