--- a/frontend/src/style/Login.css
+++ b/frontend/src/style/Login.css
@@ -10,7 +10,7 @@
 .icon {
   width: 50px;
   height: 50px;
-  background-image: url('../resyrs/login/free-icon-user-9463231.png');
+  background-image: url('../assets/login/free-icon-user-9463231.png');
   background-size: cover;
 }
 h1 {
@@ -25,5 +25,22 @@ form {
 
 input {
   margin: 10px 0;
+}
+
+.button {
+  margin: 20px 0;
+  width: 40vw;
+  font-size: 20px;
+  background-color: #769929;
+  border-radius: 25px;
+}
+
+.input {
+  width: 40vw;
+  height: 40px;
+  margin: 1px;
+  border: 1px solid rgb(104, 104, 104);
+  border-radius: 25px;
+
 }
 
