--- a/frontend/src/style/Moderation.css
+++ b/frontend/src/style/Moderation.css
@@ -2,40 +2,46 @@ header {
   width: 100vw;
   height: 70px;
   background-color: rgb(255, 255, 255);
-  border: 2px solid rgb(0, 0, 0);
 
-  position: relative;
+  z-index: 3;
+
+  box-shadow: 0 7.5px 10px 4.5px #dddddd;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0px;
+
+  padding: 0px 50px;
+
+  h1 {
+    font-size: 2vw;
+  }
 
   .content_user {
-    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
     gap: 0px;
 
-    padding: 0px 50px;
-
-
-    .user {
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: flex-end;
-    }
-
-    .button {
-      color: rgb(124, 216, 98);
-      cursor: pointer;
+    p {
+      margin: 0;
     }
   }
-}
 
+  .button_exit {
+    color: rgb(124, 216, 98);
+    cursor: pointer;
+  }
+
+}
 
 main {
   width: 100vw;
+  z-index: 1;
 
   .section1 {
     width: 100%;
@@ -47,13 +53,56 @@ main {
     align-items: center;
     gap: 0px;
 
-    .conteiner_catalogue, .conteiner_kart {
+    .conteiner_catalogue,
+    .conteiner_kart {
       width: 40%;
       height: 80%;
+      box-shadow: 0 0 4.5px 4.5px #dddddd;
       background-color: rgb(255, 255, 255);
-      border: 2px solid rgb(0, 0, 0);
+      /* border: 1px solid rgb(0, 0, 0); */
     }
   }
+
+  .novosti {
+    width: 100%;
+    /* height: 30vh; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 0px;
+
+    .novosti_button {
+      width: 30vw;
+      background-color: #8BB82A;
+      width: 30vw;
+      font-size: 20px;
+      border-radius: 15px;
+
+
+    }
+  }
+}
+
+.icon-minu {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 255, 255);
+  margin-right: 25px;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(0.9);
+  }
+
+  &:active {
+    transform: scale(0.8);
+  }
+}
+
+.offcanvas {
+
 }
 
 .modal {
