--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -9,13 +9,9 @@
   align-items: center;
 }
 
-
-
-
 form {
   width: 620px;
 }
-
 
 .post-enter {
   transform: translateX(-350px);
@@ -38,10 +34,77 @@ form {
 }
 
 .carts {
-  width: 200px;
+  width: 180px;
+  height: 230px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: flex-start;
+  gap: 20px;
+
+  position: relative;
+
+  .cart__cotent {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 1px;
+
+    .cart__title {
+      margin-bottom: 2px;
+    }
+
+    .hr {
+      width: 100%;
+      border: 2px solid rgb(255, 255, 255);
+    }
+  }
+
+  .cryk {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
+    width: 23px;
+    height: 23px;
+
+    border-radius: 50%;
+    border: 1px solid rgb(255, 255, 255);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .red {
+    background-color: red;
+  } 
+
+  .green {
+    background-color: green;
+  }
+
+  .cart__button {
+    width: 50%;
+    padding: 0;
+    height: 20px;
+    font-size: 10px;
+  }
 }
 
 .Cataloglist {
   width: 100%;
-  
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 23px;
 }
