--- a/frontend/src/style/Main.css
+++ b/frontend/src/style/Main.css
@@ -75,15 +75,15 @@ main {
   background-color: rgb(255, 255, 255);
 
   .razdel_img {
-    width: 100%;
-    height: 5vh;
+    width: 120%;
+    /* height: 5vh; */
     /* background-color: aquamarine; */
     /* background-image: url('../resyrs/main/1.png'); */
     background-size: cover;
     position: absolute;
     z-index: 3;
-    top: -30px;
-    /* left: -20px; */
+    top: -45px;
+    left: -80px;
   }
 
   .section_1 {
