--- a/frontend/src/style/Moderation.css
+++ b/frontend/src/style/Moderation.css
@@ -59,9 +59,29 @@ main {
       height: 80%;
       box-shadow: 0 0 4.5px 4.5px #dddddd;
       background-color: rgb(255, 255, 255);
+
       /* border: 1px solid rgb(0, 0, 0); */
     }
+
+    .conteiner_catalogue {
+
+      .catalogue {
+        width: 100%;
+        height: 85%;
+        overflow: scroll;
+        
+        padding: 10px 0;
+      }
+    }
+
+    .conteiner_kart {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-items: center;
+    }
   }
+
 
   .novosti {
     width: 100%;
@@ -83,6 +103,12 @@ main {
 
     }
   }
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 28px;
 }
 
 .icon-minu {
