--- a/frontend/src/style/Main.css
+++ b/frontend/src/style/Main.css
@@ -1,5 +1,7 @@
 .Main {
   width: 100%;
+  overflow: hidden;
+
 }
 
 .container_navbar {
@@ -7,7 +9,7 @@
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  /* image 1 */
+      /* image 1 */
 
   position: relative;
   left: 0px;
@@ -30,9 +32,13 @@
     background-color: rgba(0, 0, 0, 0.5);
     font-family: Arial, sans-serif;
     width: 100%;
+    margin: -3px;
+    box-shadow: 0 1px 10px 1.5px #cec6c6;
+
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+
     padding: 15px 30px;
     height: 80px;
 
@@ -86,7 +92,7 @@ main {
     left: -80px;
   }
 
-  .section_1 {
+  .about {
     width: 100%;
     height: 100vh;
     z-index: -1;
