--- a/frontend/src/style/Main.css
+++ b/frontend/src/style/Main.css
@@ -1,7 +1,6 @@
 .Main {
   width: 100%;
   overflow: hidden;
-
 }
 
 .container_navbar {
@@ -9,7 +8,7 @@
   width: 100vw;
   height: 100vh;
   background-size: cover;
-      /* image 1 */
+  /* image 1 */
 
   position: relative;
   left: 0px;
@@ -110,10 +109,45 @@ main {
 
       .col-1 {
         width: 40%;
+        font-family: 'Arial', sans-serif;
+        text-align: left;
+        padding: 20px;
+        margin: 0 auto;
+
+        h2 {
+          font-size: 4vw;
+          font-weight: 500;
+          color: #202020;
+          margin-bottom: 20px;
+        }
+
+        p {
+          font-size: 18px;
+          line-height: 1.6;
+          color: #555;
+          margin-bottom: 30px;
+        }
+
+        .btn {
+          display: flex;
+          justify-content: center;
+
+          button {
+            width: 25vw;
+            padding: 10px 20px;
+            border-radius: 30px;
+            color: #ffffff;
+            background-color: #769929;
+          }
+        }
       }
 
       .col-2 {
         width: 40%;
+
+        img {
+          width: 100%;
+        }
       }
     }
   }
