--- a/frontend/src/style/СatalogMain.css
+++ b/frontend/src/style/СatalogMain.css
@@ -52,6 +52,14 @@ h2 {
   border-radius: 15px;
 }
 
+.card-images {
+  width: 280px;
+  height: 240px;
+  object-fit: cover;
+  background-size: cover;
+  border-radius: 15px;
+}
+
 .carousel-indicators {
 
   gap: 20px;
