--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Jura';
+  font-style: normal;
 }
 
 form {
@@ -84,7 +86,7 @@ form {
 
   .red {
     background-color: red;
-  } 
+  }
 
   .green {
     background-color: green;
@@ -106,5 +108,5 @@ form {
   justify-content: space-evenly;
   align-items: flex-start;
   align-content: flex-start;
-  gap: 23px;
+  gap: 10px;
 }
