--- a/frontend/src/style/Main.css
+++ b/frontend/src/style/Main.css
@@ -1,6 +1,8 @@
 .Main {
   width: 100%;
   overflow: hidden;
+  font-family: 'Jura';
+  font-style: normal;
 }
 
 .container_navbar {
@@ -15,24 +17,26 @@
   top: 0px;
 
   h1 {
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 148px;
+    font-family: 'Jura';
+    font-style: normal;
     position: absolute;
     width: 100%;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    font-family: Arial, sans-serif;
-    font-size: 36px;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
   .navbar {
-    background-color: rgba(0, 0, 0, 0.5);
-    font-family: Arial, sans-serif;
+    /* background-color: rgba(0, 0, 0, 0.5); */
     width: 100%;
     margin: -3px;
-    box-shadow: 0 1px 10px 1.5px #cec6c6;
+    /* box-shadow: 0 1px 10px 1.5px #cec6c6; */
 
     display: flex;
     justify-content: center;
@@ -57,7 +61,8 @@
 
       width: 40%;
 
-      a {
+      .a {
+        cursor: pointer;
         display: inline-block;
         margin: 0 20px;
 
@@ -115,7 +120,8 @@ main {
         margin: 0 auto;
 
         h2 {
-          font-size: 4vw;
+          width: 400px;
+          font-size: 3.5vw;
           font-weight: 500;
           color: #202020;
           margin-bottom: 20px;
@@ -151,4 +157,49 @@ main {
       }
     }
   }
+}
+
+.novosti {
+  width: 100%;
+  /* height: 30vh; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 0px;
+
+  margin: 10px 0 50px 0;
+}
+.novosti_button {
+  width: 30vw;
+  background-color: #8bb82a;
+  width: 30vw;
+  font-size: 20px;
+  border-radius: 15px;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 28px;
+}
+
+.icon-minu {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 255, 255);
+  margin-right: 25px;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(0.9);
+  }
+
+  &:active {
+    transform: scale(0.8);
+  }
+}
+.novosti_img {
+  filter: blur(1.5px);
 }
